css/index.css
@font-face
{
font-family: 'FreeStyle';
src: url(../fonts/FREESCPT.TTF);
}

@font-face
{
font-family: 'Impact';
src: url(../fonts/impact.ttf);
}

body {
  width:auto; height:auto;  
  padding: 0 0 0 0;
  margin: 0;
  color: #fff; 
  font-family: 'Arial', sans-serif;
  font-size:18px;
  display:block;
}

.image {
  display:inline-block;
  position: relative;
  width:23%;
  margin-left: 3%;
  margin-right: 3%;
}
  .image h3 {
    font-size: 40px;
    margin-bottom: 20px;
  }
  .image img {
    width:100%;
    border-radius:5px;
  }

#homeBanner {
  background-image: url(../images/backgrounds/welcome.jpg); 
  background-repeat: no-repeat;
  background-position: center;  
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  -webkit-transform: translateZ(0); 
  bottom: 0;
  left: 0;
  margin: auto;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  display: block;
}
  #homeBanner h1{ 
    color:#fff;
    font-size: 24px;
    text-shadow: -5px 5px 8px rgba(0,0,0,.4);
    position: relative;
    text-align: center;
    font-family: 'Lora', serif;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    font-weight: normal;
    letter-spacing: 10px;
    display: inline-block;
    width: 100%
  }
  #homeBanner h2{ 
    color:#fff;
    font-size: 100px;
    text-shadow: -5px 5px 8px rgba(0,0,0,.4);
    position: relative;
    font-family: 'Duru Sans', sans-serif;
    top:75%;
    width:100%;
    letter-spacing:4px;
    margin: 0 auto 0px;
    padding: 0 0px;
    padding-top:10px;
    font-weight: normal;
    display: inline-block;
    text-align:center;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
  }
  #homeBanner #houseText {
    font-family: 'Lora', serif;
    font-size:105px; 
    letter-spacing:5px;
  }

h3 { 
  color:#5f5f5f;
  font-size: 30px;
  position: absolute;
  /*margin: 0 auto 0px;*/
  padding: 40px 0px 0px 0px;
  font-family: 'Lora', serif;
  font-weight: normal;
  display: inline-block;
  width: 100%;
  position:relative;
  /*margin-top: -10px;*/
  text-align:center;
  -webkit-margin-before: 0em;
  -webkit-margin-after: 0em;
  -webkit-margin-start: 0px;
  -webkit-margin-end: 0px;
  /*vertical-align: bottom;*/
  margin-bottom: 20px;
}

#acronymText {
  font-family: 'Duru Sans', sans-serif;
  color:#0aa3df;
  font-size:45px; 
  line-height:30px;
}

.break {
  display: none;
}

#bannerText {
  position: fixed;
  -webkit-transform: translateZ(0); 
  width: 100%;  
  top: 40%;
  margin-top: 0px; 
  opacity: 1;
}

#mission {
  position:relative; 
  width:80%; 
  background-color:white; 
  left:10%; 
  top: -100px; 
  border-radius:30px; 
}
  #houseLogo {
    text-align: center;
    display: block;
    position: relative;
    clear: both;
    margin-left: auto;
    margin-right: auto;
    padding-top: 20px;
    height: 80px;
  }
  #mission h3 {
    padding-bottom:5px;
    /*margin-right: 10px;*/
  }
  #mission p {
    color:#999999; 
    padding: 1em 2% 1.5em 2%; 
    margin: 0px; 
    /*margin-top:-0.5em;*/
    text-align: center;
    display: inline-block;
    /*width: 65%;*/
  }
  #mission #readMore {
    display: block;
    /*clear: both;*/
    position: relative;
    margin-right: auto;
    margin-left: auto;
    text-align: center;

    /*display:table; height:100%; width:100%;*/
  }
    #mission #readMore img {
      display: inline;
      position: relative;
    }
    #mission #readMore h2 {
      color:#999999;
      font-size: 12px;
      display: inline;
      text-align: left;
    }

.quotes {
  display: block;
  width: 90%;
  position: relative;
}

.quoteWrapper {
  width: 14%;
  display: inline-block;
  position: relative;
  display: table-cell;
  vertical-align: middle;
}
  .quoteWrapper #openQuote {
    margin-left: 10%;
  }

#content {
  background-image: url(../images/backgrounds/whitepaper.jpg);
  background-size: 100% auto;
  background-repeat: repeat-y;
  display:block;
  width: 100%; 
  position: relative;
  clear:both;
  box-shadow: 0px 3px 25px #5f5f5f;
}
  #content p {
    font-size:24px;
  }
  #content #copyright {
    font-size:14px;
    -webkit-margin-after: 0.25em; 
    color:#9f9f9f; 
    text-align:right; 
    padding-right:5px;
  }

/*  mainNav */
#mainNav {
  position: fixed;     
  -webkit-transform: translateZ(0); 
  top:0;
  right: 0; 
  width: 100%;
  height:40px;
  margin: 0px 0px 0px 0px;   
  text-align: right;   
  display: inline-block;  
  /*background-color: white;*/
  background-color:rgba(255,255,255,0.65);
} 

.animatedButton {
  height: 30px;
  width: 90px;
  position: relative;
  display:inline;
  text-decoration: none;
  padding-left: 10px;
}

#horizontalMenu {
  padding-top:5px;
  display: inline-block;
}

#homelogo {
  left: 10px;
  height:30px;
  width: auto;
  position: fixed;
  padding: 5px 0px 0px 15px;
}

#hamburgerIcon {
  display: none;
}
/*  mainNav */

.highlightedText {
  font-family:'FreeStyle'; 
  color:#7cba2b; 
  font-size:55px; 
  padding-bottom:-20px;
}

#footer {
  background-color: rgba(255,255,255,0.65);
  height:60px; 
  width: 100%;
  position:relative; 
  clear:both
}

.footerImage {
  height:60%; 
  width:auto;
  min-width: 30px;
  display:inline-block; 
  position:relative;
  top:20%;
  margin-right: 3%;
  margin-left: 3%;
  vertical-align: top;
}

.footerSection {
  width:32%; 
  display:inline-block; 
  height:100%;
  vertical-align: top;
}

#contact {
  display: block;
  position:relative;
  margin-left: auto;
  margin-right: auto;
  height: 65%;
  top:17.5%;
}

.divider {
  height:75%;
  width:1px;
  background-color: #b2b2b2;
  display: inline-block;
  position: absolute;
  top:12.5%;
}

#whirlpoollogo {
  height:60%;
  top:20%;
}

#purduelogo {
  height: 45%;
  top:27.5%;
}

#horizontalDivider {
  display: none;
  position: absolute;
  height:1px;
  width:75%;
  background-color: #b2b2b2;
  left:12.5%;
}

#tab {
  top: -100px; 
  margin-left: auto;
  margin-right: auto;
  text-align:center;
  display:block;
  position:relative;
  clear:both;
}

#unsupportedBrowser {
  position: absolute;
  height: 80%;
  top: 10%;
  width: 90%;
  left: 5%;
  background-color: #0000ff;
  border-radius: 15px;
  display: none;
}

